# python-project-template

./: .pre-commit-config.yaml  .sonarcloud.properties  LICENSE  README.md  lint.sh  main.py  pyproject.toml  ruff.toml  run.sh  setup.sh  tests.sh  ty.toml
.api/: examples.http
.github/workflows/: main.yml
.sonarlint/: connectedMode.json
examples/: boolean_operators.py  dictionaries.py  for_while.py  functional.py  lists.py  oop.py  operators.py  sets.py  strings.py  type_hints.py  types.py
routes/: examples.py
src/: main.py  run.py
src/models/: user_model.py
src/routes/: hello.py  users.py
src/services/: users_service.py
tests/: test_example.py
