[project]
authors = [{ name = "marceloat23", email = "marcelo@23people.io" }]
name = "python-project-template"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.128.6", "uvicorn>=0.40.0"]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "pytest>=9.0.2", "ruff>=0.15.0", "ty>=0.0.15"]

[tool.ruff]
exclude = [".api", "examples"]
line-length = 100              # Max line length for code
indent-width = 4

[tool.ruff.lint]
extend-select = [
  "F",   # Pyflakes rules
  "W",   # PyCodeStyle warnings
  "E",   # PyCodeStyle errors
  "I",   # Sort imports properly
  "UP",  # Warn if certain things can changed due to newer Python versions
  "C4",  # Catch incorrect use of comprehensions, dict, list, etc
  "FA",  # Enforce from __future__ import annotations
  "ISC", # Good use of string concatenation
  "ICN", # Use common import conventions
  "RET", # Good return practices
  "SIM", # Common simplification rules
  "TID", # Some good import practices
  "TC",  # Enforce importing certain types in a TYPE_CHECKING block
  "TD",  # Be diligent with TODO comments
  "NPY", # Some numpy-specific things
  "A",   # detect shadowed builtins
  "BLE", # disallow catch-all exceptions
  "S",   # disallow things like "exec"
  "T20", # disallow print statements
]
ignore = [
  "S101", # Ignore asserting statements that use "assert" is okay in tests
  "T201", # Ignore "Use of print detected" because we want to allow print statements in tests
]

[tool.ty.src]
exclude = ["examples"]

[tool.ty.rules]
division-by-zero = "error"
